优化 Executer 构建